--- a/UI/ERP.BlazorUI/Components/Layout/NavMenu.razor
+++ b/UI/ERP.BlazorUI/Components/Layout/NavMenu.razor
@@ -3,9 +3,10 @@
 
         <MudDivider Class="my-2" />
 
-        <MudNavGroup Class="text" Title="Students" Icon="@Icons.Material.Filled.Person" Expanded="false">
-            <MudNavLink Href="/" Icon="@Icons.Material.Filled.People" IconColor="Color.Success">Users</MudNavLink>
-            <MudNavLink Href="/counter" Icon="@Icons.Material.Filled.Security" IconColor="Color.Info">Security</MudNavLink>
+        <MudNavGroup Class="text" Title="Students" Href="/" Icon="@Icons.Material.Filled.Person" Expanded="true">
+            <MudNavLink Href="/" Icon="@Icons.Material.Filled.Home" IconColor="Color.Primary">Home</MudNavLink>
+            <MudNavLink Href="/studenteditlist" Icon="@Icons.Material.Filled.People" IconColor="Color.Primary">Edit List</MudNavLink>
+            <MudNavLink Href="/counter" Icon="@Icons.Material.Filled.Security" IconColor="Color.Info">Counter</MudNavLink>
         </MudNavGroup>
 
         <MudNavGroup Title="Staff" Icon="@Icons.Material.Filled.PeopleOutline" Expanded="false">
