--- a/UI/ERP.BlazorUI/Components/Layout/NavMenu.razor
+++ b/UI/ERP.BlazorUI/Components/Layout/NavMenu.razor
@@ -3,20 +3,42 @@
 
         <MudDivider Class="my-2" />
 
-        <MudNavGroup Class="text" Title="Students" Href="/" Icon="@Icons.Material.Filled.Person" Expanded="true">
-            <MudNavLink Href="/" Icon="@Icons.Material.Filled.Home" IconColor="Color.Primary">Home</MudNavLink>
-            <MudNavLink Href="/studenteditlist" Icon="@Icons.Material.Filled.People" IconColor="Color.Primary">Edit List</MudNavLink>
-            <MudNavLink Href="/counter" Icon="@Icons.Material.Filled.Security" IconColor="Color.Info">Counter</MudNavLink>
+        <MudNavGroup Class="text" Title="Adminstration" Href="/" Icon="@Icons.Material.Filled.Person" IconColor="Color.Inherit" Expanded="false">
+            <MudNavLink Href="/counter" Icon="@Icons.Material.Filled.Home" IconColor="Color.Inherit">Programs</MudNavLink>
+            <MudNavLink Href="/studenteditlist" Icon="@Icons.Material.Filled.School" IconColor="Color.Inherit">Admission</MudNavLink>
+            <MudNavLink Href="/counter" Icon="@Icons.Material.Filled.MenuBook" IconColor="Color.Inherit">Curriculum</MudNavLink>
+            <MudNavLink Href="/counter" Icon="@Icons.Material.Filled.Security" IconColor="Color.Inherit">Sheduling</MudNavLink>
+            <MudNavLink Href="/counter" Icon="@Icons.Material.Filled.Security" IconColor="Color.Inherit">Examination</MudNavLink>
+            <MudNavLink Href="/counter" Icon="@Icons.Material.Filled.Security" IconColor="Color.Inherit">Transcripts</MudNavLink>
+        </MudNavGroup>
+        <MudNavGroup Title="Academic" Icon="@Icons.Material.Filled.LibraryBooks" Expanded="false">
+            <MudNavLink Href="/counter" Icon="@Icons.Material.Filled.People" IconColor="Color.Inherit">Registration</MudNavLink>
+            <MudNavLink Href="/counter" Icon="@Icons.Material.Filled.People" IconColor="Color.Inherit">Attendance</MudNavLink>
+            <MudNavLink Href="/counter" Icon="@Icons.Material.Filled.Security" IconColor="Color.Inherit">Evaluations</MudNavLink>
+            <MudNavLink Href="/register" Icon="@Icons.Material.Filled.People" IconColor="Color.Inherit">Results</MudNavLink>
         </MudNavGroup>
 
-        <MudNavGroup Title="Staff" Icon="@Icons.Material.Filled.PeopleOutline" Expanded="false">
-            <MudNavLink Href="/users" Icon="@Icons.Material.Filled.People" IconColor="Color.Success">Users</MudNavLink>
-            <MudNavLink Href="/security" Icon="@Icons.Material.Filled.Security" IconColor="Color.Info">Security</MudNavLink>
+        <MudNavGroup Title="Students" Icon="@Icons.Material.Filled.PeopleOutline" Expanded="false">
+            <MudNavLink Href="/counter" Icon="@Icons.Material.Filled.People" IconColor="Color.Inherit">Registration</MudNavLink>
+            <MudNavLink Href="/counter" Icon="@Icons.Material.Filled.People" IconColor="Color.Inherit">Mentering</MudNavLink>
+            <MudNavLink Href="/counter" Icon="@Icons.Material.Filled.Security" IconColor="Color.Inherit">Requests</MudNavLink>
+            <MudNavLink Href="/counter" Icon="@Icons.Material.Filled.Security" IconColor="Color.Inherit">Resutls</MudNavLink>
+            <MudNavLink Href="/counter" Icon="@Icons.Material.Filled.Security" IconColor="Color.Inherit">Feedbacks</MudNavLink>
         </MudNavGroup>
 
-        <MudNavGroup Title="Academic" Icon="@Icons.Material.Filled.School" Expanded="false">
-            <MudNavLink Href="/users" Icon="@Icons.Material.Filled.People" IconColor="Color.Success">Users</MudNavLink>
-            <MudNavLink Href="/security" Icon="@Icons.Material.Filled.Security" IconColor="Color.Info">Security</MudNavLink>
+        <MudNavGroup Title="Department" Icon="@Icons.Material.Filled.PeopleOutline" Expanded="false">
+            <MudNavLink Href="/counter" Icon="@Icons.Material.Filled.Schedule" IconColor="Color.Inherit">Sheduling</MudNavLink>
+            <MudNavLink Href="/counter" Icon="@Icons.Material.Filled.HighQuality" IconColor="Color.Inherit">Accreditation</MudNavLink>
+            <MudNavLink Href="/counter" Icon="@Icons.Material.Filled.Inventory" IconColor="Color.Inherit">Inventory</MudNavLink>
+            <MudNavLink Href="/counter" Icon="@Icons.Material.Filled.Science" IconColor="Color.Inherit">Laboratories</MudNavLink>
+        </MudNavGroup>
+
+        <MudNavGroup Title="Admin" Icon="@Icons.Material.Filled.Settings" Expanded="false">
+            <MudNavLink Href="/counter" Icon="@Icons.Material.Filled.People" IconColor="Color.Inherit">Manage Staff</MudNavLink>
+            <MudNavLink Href="/counter" Icon="@Icons.Material.Filled.Security" IconColor="Color.Inherit">Manage Students</MudNavLink>
+            <MudNavLink Href="/counter" Icon="@Icons.Material.Filled.Security" IconColor="Color.Inherit">Control Panel</MudNavLink>
+            <MudNavLink Href="/counter" Icon="@Icons.Material.Filled.Security" IconColor="Color.Inherit">Settings</MudNavLink>
+
         </MudNavGroup>
     </MudNavMenu>
 </MudPaper>
