--- a/UI/ERP.BlazorUI/Components/Pages/Counter.razor
+++ b/UI/ERP.BlazorUI/Components/Pages/Counter.razor
@@ -5,7 +5,7 @@
 
 <h1>Counter</h1>
 
-<p role="status">අගය: @currentCount</p>
+<p role="status">Value: @currentCount</p>
 
 <button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
 
