--- a/UI/ERP.BlazorUI/Components/Layout/NavMenu.razor
+++ b/UI/ERP.BlazorUI/Components/Layout/NavMenu.razor
@@ -3,8 +3,8 @@
 
         <MudDivider Class="my-2" />
 
-        <MudNavGroup Class="text" Title="Adminstration" Href="/" Icon="@Icons.Material.Filled.Person" IconColor="Color.Inherit" Expanded="false">
-            <MudNavLink Href="/counter" Icon="@Icons.Material.Filled.Home" IconColor="Color.Inherit">Programs</MudNavLink>
+        <MudNavGroup Class="text" Title="Adminstration" Icon="@Icons.Material.Filled.Person" IconColor="Color.Inherit" Expanded="false">
+            <MudNavLink Href="/admin/manageprograms" Icon="@Icons.Material.Filled.Home" IconColor="Color.Inherit">Programs</MudNavLink>
             <MudNavLink Href="/studenteditlist" Icon="@Icons.Material.Filled.School" IconColor="Color.Inherit">Admission</MudNavLink>
             <MudNavLink Href="/counter" Icon="@Icons.Material.Filled.MenuBook" IconColor="Color.Inherit">Curriculum</MudNavLink>
             <MudNavLink Href="/counter" Icon="@Icons.Material.Filled.Security" IconColor="Color.Inherit">Sheduling</MudNavLink>
@@ -16,6 +16,7 @@
             <MudNavLink Href="/counter" Icon="@Icons.Material.Filled.People" IconColor="Color.Inherit">Attendance</MudNavLink>
             <MudNavLink Href="/counter" Icon="@Icons.Material.Filled.Security" IconColor="Color.Inherit">Evaluations</MudNavLink>
             <MudNavLink Href="/register" Icon="@Icons.Material.Filled.People" IconColor="Color.Inherit">Results</MudNavLink>
+            <MudNavLink Href="/register" Icon="@Icons.Material.Filled.People" IconColor="Color.Inherit">Modules</MudNavLink>
         </MudNavGroup>
 
         <MudNavGroup Title="Students" Icon="@Icons.Material.Filled.PeopleOutline" Expanded="false">
@@ -33,7 +34,7 @@
             <MudNavLink Href="/counter" Icon="@Icons.Material.Filled.Science" IconColor="Color.Inherit">Laboratories</MudNavLink>
         </MudNavGroup>
 
-        <MudNavGroup Title="Admin" Icon="@Icons.Material.Filled.Settings" Expanded="false">
+        <MudNavGroup Title="Site Admin" Icon="@Icons.Material.Filled.Settings" Expanded="false">
             <MudNavLink Href="/counter" Icon="@Icons.Material.Filled.People" IconColor="Color.Inherit">Manage Staff</MudNavLink>
             <MudNavLink Href="/counter" Icon="@Icons.Material.Filled.Security" IconColor="Color.Inherit">Manage Students</MudNavLink>
             <MudNavLink Href="/counter" Icon="@Icons.Material.Filled.Security" IconColor="Color.Inherit">Control Panel</MudNavLink>
