--- a/UI/ERP.BlazorUI/Components/Layout/NavMenu.razor
+++ b/UI/ERP.BlazorUI/Components/Layout/NavMenu.razor
@@ -11,12 +11,13 @@
             <MudNavLink Href="/counter" Icon="@Icons.Material.Filled.Security" IconColor="Color.Inherit">Examination</MudNavLink>
             <MudNavLink Href="/counter" Icon="@Icons.Material.Filled.Security" IconColor="Color.Inherit">Transcripts</MudNavLink>
         </MudNavGroup>
+
         <MudNavGroup Title="Academic" Icon="@Icons.Material.Filled.LibraryBooks" Expanded="false">
-            <MudNavLink Href="/counter" Icon="@Icons.Material.Filled.People" IconColor="Color.Inherit">Registration</MudNavLink>
-            <MudNavLink Href="/counter" Icon="@Icons.Material.Filled.People" IconColor="Color.Inherit">Attendance</MudNavLink>
-            <MudNavLink Href="/counter" Icon="@Icons.Material.Filled.Security" IconColor="Color.Inherit">Evaluations</MudNavLink>
-            <MudNavLink Href="/register" Icon="@Icons.Material.Filled.People" IconColor="Color.Inherit">Results</MudNavLink>
-            <MudNavLink Href="/register" Icon="@Icons.Material.Filled.People" IconColor="Color.Inherit">Modules</MudNavLink>
+            <MudNavLink Href="/counter" Icon="@Icons.Material.Filled.People" IconColor="Color.Inherit">Modules</MudNavLink>
+            <MudNavLink Href="/counter" Icon="@Icons.Material.Filled.People" IconColor="Color.Inherit">Evaluations</MudNavLink>
+            <MudNavLink Href="/counter" Icon="@Icons.Material.Filled.Security" IconColor="Color.Inherit">Results</MudNavLink>
+            <MudNavLink Href="/register" Icon="@Icons.Material.Filled.People" IconColor="Color.Inherit">Requests</MudNavLink>
+            <MudNavLink Href="/register" Icon="@Icons.Material.Filled.People" IconColor="Color.Inherit">Mentering</MudNavLink>
         </MudNavGroup>
 
         <MudNavGroup Title="Students" Icon="@Icons.Material.Filled.PeopleOutline" Expanded="false">
