--- a/UI/ERP.BlazorUI.Identity/Components/Layout/MainLayout.razor
+++ b/UI/ERP.BlazorUI.Identity/Components/Layout/MainLayout.razor
@@ -6,12 +6,12 @@
 
 
 <MudLayout>
-    <MudAppBar Elevation="1">
+    <MudAppBar Elevation="1" Color="Color.Transparent">
         <MudIconButton Icon="@Icons.Material.Filled.Menu"
                        Color="Color.Inherit"
                        Edge="Edge.Start" OnClick="@((e) => DrawerToggle())" />
 
-        <MudText Typo="Typo.h5" Class="px-4">Application</MudText>
+        <MudText Typo="Typo.h5" Class="px-4">Faculty of Engineering</MudText>
         <!--
             <MudMenu Label="Open Menu" Variant="Variant.Filled" Color="Color.Inherit">
                 <MudMenuItem>OnClick Only</MudMenuItem>
