Teacher Module Relationship

--- a/UI/ERP.RazorComponents/Students/EditStudentDialog.razor
+++ b/UI/ERP.RazorComponents/Students/EditStudentDialog.razor
@@ -13,7 +13,7 @@
         <MudTextField Value="@student.StudentId" Label="Student ID" ReadOnly="true" />
         <MudTextField Value="@student.FirstName" Label="First Name" />
         <MudTextField Value="@student.LastName" Label="Last Name" />
-        <MudTextField Value="@student.Address" Label="Address"  />
+        <MudTextField Value="@student.Address1" Label="Address"  />
         <MudTextField Value="@student.Email" Label="Address" />
     </DialogContent>
     <DialogActions>
