--- a/UI/ERP.RazorComponents/Students/StudentAdd.razor
+++ b/UI/ERP.RazorComponents/Students/StudentAdd.razor
@@ -27,8 +27,8 @@
                           Immediate="true"
                           Label="Email" />
 
-            <MudTextField @bind-Value="model.Address"
-                          For="@(() => model.Address)"
+            <MudTextField @bind-Value="model.Address1"
+                          For="@(() => model.Address1)"
                           Immediate="true"
                           Label="Address" />
 
@@ -83,7 +83,7 @@
                 .MustAsync(async (value, cancellationToken) => await IsUniqueAsync(value));
 
 
-            RuleFor(x => x.Address)
+            RuleFor(x => x.Address1)
                 .NotEmpty()
                 .Length(1, 100);
 
