--- a/UI/ERP.RazorComponents/Students/StudentsList.razor
+++ b/UI/ERP.RazorComponents/Students/StudentsList.razor
@@ -13,7 +13,7 @@
     </HeaderContent>
     <RowTemplate>
         <MudTd DataLabel="Nr">@context.RegistrationNum</MudTd>
-        <MudTd DataLabel="Sign">@context.FullName</MudTd>
+        <MudTd DataLabel="Sign">@context.FirstName @context.LastName </MudTd>
         <MudTd DataLabel="Name">@context.Email</MudTd>
         <MudTd DataLabel="">
             <MudImage Src="images/woman.png" Width="40"/>
